--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         .video-player-container { position: relative; aspect-ratio: 16 / 9; background-color: #2d3748; border-radius: 0.5rem; overflow: hidden; display: flex; align-items: center; justify-content: center; }
         .video-player { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
         .remote-video { transform: scaleX(1); }
-        /* Adicionado para não espelhar a partilha de ecrã */
-        .video-player.no-mirror { transform: scaleX(1); }
+        /* Adicionado para não espelhar e enquadrar a partilha de ecrã */
+        .video-player.no-mirror {
+            transform: scaleX(1);
+            object-fit: contain; /* Garante que todo o conteúdo do ecrã é visível */
+        }
         .participant-name { position: absolute; bottom: 0; left: 0; background-color: rgba(0, 0, 0, 0.5); padding: 0.25rem 0.75rem; border-top-right-radius: 0.5rem; font-size: 0.875rem; }
     </style>
 </head>
