--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@
                         thumbnailBar.appendChild(container);
                     });
 
-                    // Fazer o ecrã partilhado ocupar o espaço principal
+                    // Fazer o ecrã partilhado ocupar o espaço principal e definir o tamanho
                     videoGrid.appendChild(localContainer);
+                    localContainer.classList.add('w-4/5'); // Define a largura para 80%
                     
                     for (const peerId in peers) {
                         const sender = peers[peerId].getSenders().find(s => s.track && s.track.kind === 'video');
@@ -241,6 +242,7 @@
                 }
                 videoGrid.className = 'flex-grow p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 overflow-y-auto';
                 videoGrid.insertBefore(localContainer, videoGrid.firstChild);
+                localContainer.classList.remove('w-4/5'); // Remove a classe de tamanho
 
                 for (const peerId in peers) {
                     const sender = peers[peerId].getSenders().find(s => s.track && s.track.kind === 'video');
